--- a/pod.yaml
+++ b/pod.yaml
@@ -27,5 +27,5 @@ spec:
     spec:
       containers:
         - name: hello
-          image: aravindulb/pyimage:latest
+          image: aravindulb/kubeimg:latest
           imagePullPolicy: Always
